Fix T80332: principle volume shader not working for world in Eevee

The handling of missing volume grids for the principled volume shader was
incomplete, different inputs need different default values.